--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialec=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8090
+#application.properties
+miapp.apikey=123
